--- a/index.html
+++ b/index.html
@@ -5,44 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Sosemin|2022</title>
 </head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="assest/img/logo.png" alt="logo pagina web">
+<body class="gridIndex">
+    <header class="container__header">
+        <div class="container__logo"> 
+            <a href="index.html"><img src="assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="pages/servicios.html">Servicios</a></li>
-                <li><a href="pages/nosotros.html">Quienes Somos</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-                <li><a href="pages/ubicacion.html">Ubicacion</a></li>
-            </ul>
-        </nav>
+        <div class="container__menu">
+            <nav>
+                <ul class="container__menu--list">
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="pages/servicios.html">Servicios</a></li>
+                    <li><a href="pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="contenedor">
-            <h1>SOSEMINT</h1>
-            <img id="imagenInicio"src="assest/img/mecanica_industrial.jpg" alt="imagen mecanica empresa">
-        </div>
-        <div class="contenedor__grande">
-            <div class="contenedor__mediano animate__backInDown">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, quos vitae! Nostrum mollitia, est veniam, id tempore sunt animi eius laudantium odit ratione in obcaecati voluptates distinctio eaque sed ipsa! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis adipisci exercitationem molestias quam. Distinctio, reprehenderit numquam alias quisquam soluta facilis sunt fugiat vel aspernatur assumenda totam facere repudiandae molestias nihil?</p>
-                <img src="assest/img/imagen_mecanico-removebg-preview.png" style="width:300px" alt="">
+        <section class="main__primary--img">
+            <div class="texto">
+                <h2>Sosemint Ltda</h2>
+                <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y reacondicionamiento de equipos y maquinaria.</p>
             </div>
-            <div class="contenedor__mediano">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vitae consectetur earum libero sed fugit reprehenderit exercitationem tempora quidem culpa cum, ad eveniet, perspiciatis sunt harum ratione omnis dicta accusantium. lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis minima voluptas rem ducimus quisquam nisi eum explicabo laboriosam quod quidem aliquam quae nobis, illum facere necessitatibus animi voluptatem, modi magni?</p>
-                <img src="assest/img/imagen_mecanico-removebg-preview.png"style="width:300px" alt="">
+        </section>
+        <section class="container__card">
+            <div class="container__card--bloque">
+                <p> Entregamos servicios de excelencia de manera segura, eficaz y rentable en diseño, fabricación, mantenimiento y comercialización de piezas y equipos industriales, caracterizándose por la oportunidad de entrega y calidad.</p>
+                <img class="container__card--img" src="assest/img/imagen_mecanico-removebg-preview.png" alt="imagen mecanico">
             </div>
-
-        </div>
-        <div class="imagenFinal">
-            <img src="http://placekitten.com/g/1520/300" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vitae consectetur earum libero sed fugit reprehenderit exercitationem tempora quidem culpa cum, ad eveniet, perspiciatis sunt harum ratione omnis dicta accusantium. lor Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis minima voluptas rem ducimus quisquam nisi eum explicabo laboriosam quod quidem aliquam quae nobis, illum facere necessitatibus animi voluptatem, modi magni?</p>
-        </div>
+            <div class="container__card--bloque">
+                <p>Nuestro compromiso con la calidad y entrega oportuna, se reafirma con la recertificación de nuestro sistema de gestión de calidad  ISO: 9001, actualizado a su versión 2015, el cual se sustenta en la mejora continua, y teniendo como principal orientación la satisfacción de nuestros clientes y grupos de interés!</p>
+                <img class="container__card--img" src="assest/img/medida.png" alt="imagen pie de metro">
+            </div>
+        </section>
+        <section class="container__imgFinal">
+            <div class="textFinal">
+                <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos industriales junto con personal administrativo y apoyo, Sosemint. proyecta mantener los servicios y productos actuales, incorporando maquinarias, equipos, software con tecnología de punta , teniendo como prioridad la flexibilización, automatización, versatilidad y aseguramiento de calidad de los procesos productivos y administrativos de la compañía.?</p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="redes">
@@ -55,6 +59,5 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-    
 </body>
 </html>
