--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,33 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Sosemin|2022</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="../assest/img/logo.png" alt="logo pagina web" width="150px">
+    <header class="container__header">
+        <div class="container__logo"> 
+            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-            </ul>
-        </nav>
-
+        <div class="container__menu">
+            <nav>
+                <ul class="container__menu--list">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="contenedor">
-            <div class="contenedor__mediano">
-                <h1>Quienes somos</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea voluptas reiciendis beatae cupiditate nostrum adipisci explicabo voluptate assumenda facilis illum, a temporibus quia earum, sequi sapiente nihil accusamus? Maiores, qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quia eos commodi, veritatis cum nihil eum repellat temporibus deserunt iure eveniet perferendis velit nemo quisquam tenetur incidunt facere quas voluptas! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore! Amet vel laudantium corporis perspiciatis ex aspernatur nihil possimus, modi commodi esse velit quis blanditiis similique. Magni odit consequuntur tempore!</p>
-                <img src="../assest/img/x.png" alt="imagen empresa">
+        <div class="quienesSomos">
+            <div class="vision">
+                <h2>Vision</h2>
+                <p>Ser la mejor oferta de servicio industrial, sustentada en el desarrollo de capacidades, crecimiento, actualización de competencias y buenos resultados.</p>
+            </div>
+            <div class="valores">
+                <h2>Valores</h2>
+                <p>COMPROMISO: Somos conscientes de la importancia de cumplir nuestras promesas y por ellos nos exigimos a mejorar continuamente con el objetivo de satisfacer las expectativas de nuestros clientes, trabajadores y grupos de interés.</p>
+                <p>COLABORACIÓN: Porque trabajamos en equipo y en un ambiente de respeto y apoyo, reconociendo el error como una oportunidad de aprendizaje, aportamos colaborativamente a los procesos que generan productos y servicios, teniendo como prioridad la satisfacción de nuestros clientes tanto internos como externos.</p>
+            </div>
+            <div class="mision">
+                <h2>Mision</h2>
+                <p>Brindar calidad y confiabilidad en todos nuestros productos y servicios.</p>
+                <p>RESPONSABILIDAD: Somos responsables de nuestras decisiones y del cumplimiento de la normativa vigente para la entrega eficiente y comprometida de los servicios que nuestros clientes y partes interesadas nos han encargado.</p>
+                <p>HONESTIDAD: Somos coherentes entre el pensar, sentir y el hacer, honrados en la intención, en las palabras y en los actos, reflejados en prácticas transparentes y correctas, anteponiendo la verdad en cualquier situación que se genere.</p>
+                <p>RESPETO: En un ambiente de trabajo armónico, reconocemos el valor de la diversidad, respetamos la dignidad de clientes, proveedores y trabajadores y creemos que todos somos importantes para el desarrollo de la empresa.</p>
+
             </div>
         </div>
-
     </main>
     <footer>
         <div class="redes">
