--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,28 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sosemin|2022</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="../assest/img/logo.png" alt="logo pagina web" width="150px">
+    <header class="container__header">
+        <div class="container__logo"> 
+            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-            </ul>
-        </nav>
-
+        <div class="container__menu">
+            <nav>
+                <ul class="container__menu--list">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="contenedor">
-            <div class="contenedor__mediano">
+        <div class="contenedor__formulario">
                 <h1>Ponte en contacto con nosotros!</h1>
                 <form action="#">
                     <fieldset>
@@ -41,11 +42,9 @@
                         <textarea name="mensaje"  cols="30" rows="10" placeholder="Escribenos un mensaje"></textarea> <br>
                         <input type="submit" value="Enviar Datos">
                         <input type="reset" value="Limpiar datos">
-
                     </fieldset>
-
                 </form>
-            </div>
+
         </div>
 
     </main>
