--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,43 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
 
     <title>Sosemin|2022</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="../assest/img/logo.png" alt="logo pagina web" width="150px">
+    <header class="container__header">
+        <div class="container__logo"> 
+            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-            </ul>
-        </nav>
-
+        <div class="container__menu">
+            <nav>
+                <ul class="container__menu--list">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="contenedor">
-            <div class="contenedor__mediano centrar">
-                <h1>Servicios que ofrecemos:</h1>
-                <div>
-                    <img src="../assest/img/x.png" style="width:150px;" alt="servicio1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore fugiat natus possimus vero! Aperiam necessitatibus nesciunt ad, culpa cumque eveniet quasi! Quibusdam quod totam laudantium neque. Facilis esse nihil hic.</p>
+        <div class="container__main">
+            <h2 class="container__main--h2">Te ofrecemos distintos tipos de servicios...</h2>
+            <div class="container__card__services">
+                <div class="container__card--bloqueServicios">
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+
                 </div>
-                <div>
-                    <img src="../assest/img/x.png" style="width:150px;" alt="servicio2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, soluta tempora a placeat quidem, aperiam corrupti nemo harum ipsa nesciunt dolore. Blanditiis, sed quidem vero nihil voluptatibus eius fugit veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore delectus voluptatum nisi molestias reprehenderit voluptatem totam ad porro vitae. Repellendus pariatur ipsam in consectetur id nesciunt error voluptatem. Accusamus, quo.</p>
+                <div class="container__card--bloqueServicios">
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
                 </div>
-                <div>
-                    <img src="../assest/img/x.png" style="width:150px;" alt="servicio3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora optio aut culpa laboriosam vitae. Aspernatur velit consequuntur in magni quo voluptatibus? Maxime veritatis dolores dolorum debitis cupiditate quaerat dolore aut! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias, dolor! Suscipit, odit aliquid optio cupiditate vitae, possimus voluptas accusamus vel, animi eaque fugit corporis illo perferendis provident quaerat alias tempore.</p>
+                <div class="container__card--bloqueServicios">
+                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
                 </div>
-            </div>      
+                <div class="container__card--bloqueServicios">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
+
+                </div>
+
+            </div>
         </div>
     </main>
     <footer>
