--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">   
     <link rel="stylesheet" href="../css/style.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sosemin|2022</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <img src="../assest/img/logo.png" alt="logo pagina web" width="150px">
+    <header class="container__header">
+        <div class="container__logo"> 
+            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <nav class="menu">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/servicios.html">Servicios</a></li>
-                <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-                <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-            </ul>
-        </nav>
-
+        <div class="container__menu">
+            <nav>
+                <ul class="container__menu--list">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/servicios.html">Servicios</a></li>
+                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
+                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
+                    <li><a href="../pages/contacto.html">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <div class="contenedor">
-            <div class="contenedor__mediano">
+        <div class="contenedor__ubicacion">
                 <h1>Ven a visitarnos!</h1>
                 <p>Nos encontramos en... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium autem nobis fuga, delectus quod rem voluptate neque unde enim sequi quas culpa temporibus? Consectetur ducimus deleniti harum mollitia obcaecati placeat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium animi sequi aliquid, assumenda magnam, ipsam esse possimus at laudantium nesciunt ratione doloremque libero mollitia consectetur facilis quis suscipit earum neque.</p>
                 <div style="width: 100%; margin:0 auto;"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Bellavista+(Sosemint)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Sat Navs</a></iframe></div>
-            </div>
+
         </div>
     </main>
     <footer>
