--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Sosemin|2022</title>
 </head>
 <body class="gridIndex">
@@ -27,23 +28,23 @@
     </header>
     <main>
         <section class="main__primary--img">
-            <div class="texto">
+            <div class="texto" data-aos="fade-down" data-aos-duration="2000">
                 <h2>Sosemint Ltda</h2>
                 <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y reacondicionamiento de equipos y maquinaria.</p>
             </div>
         </section>
         <section class="container__card">
-            <div class="container__card--bloque">
+            <div class="container__card--bloque"data-aos="fade-right" data-aos-anchor-placement="top-center">
                 <p> Entregamos servicios de excelencia de manera segura, eficaz y rentable en diseño, fabricación, mantenimiento y comercialización de piezas y equipos industriales, caracterizándose por la oportunidad de entrega y calidad.</p>
                 <img class="container__card--img" src="assest/img/imagen_mecanico-removebg-preview.png" alt="imagen mecanico">
             </div>
-            <div class="container__card--bloque">
+            <div class="container__card--bloque"data-aos="fade-left" data-aos-anchor-placement="top-center">
                 <p>Nuestro compromiso con la calidad y entrega oportuna, se reafirma con la recertificación de nuestro sistema de gestión de calidad  ISO: 9001, actualizado a su versión 2015, el cual se sustenta en la mejora continua, y teniendo como principal orientación la satisfacción de nuestros clientes y grupos de interés!</p>
                 <img class="container__card--img" src="assest/img/medida.png" alt="imagen pie de metro">
             </div>
         </section>
         <section class="container__imgFinal">
-            <div class="textFinal">
+            <div class="textFinal"data-aos="fade-down" data-aos-duration="2000" data-aos-anchor-placement="bottom-bottom">
                 <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos industriales junto con personal administrativo y apoyo, Sosemint. proyecta mantener los servicios y productos actuales, incorporando maquinarias, equipos, software con tecnología de punta , teniendo como prioridad la flexibilización, automatización, versatilidad y aseguramiento de calidad de los procesos productivos y administrativos de la compañía.?</p>
             </div>
         </section>
@@ -59,5 +60,10 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
