se agregan animaciones a todas las paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sosemin|2022</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         </div>
     </header>
     <main>
-        <div class="contenedor__formulario">
+        <div class="contenedor__formulario" data-aos="zoom-in">
                 <h1>Ponte en contacto con nosotros!</h1>
                 <form action="#">
                     <fieldset>
@@ -59,6 +60,9 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
