--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sosemin|2022</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         </div>
     </header>
     <main>
-        <div class="quienesSomos">
+        <div class="quienesSomos"data-aos="zoom-in">
             <div class="vision">
                 <h2>Vision</h2>
                 <p>Ser la mejor oferta de servicio industrial, sustentada en el desarrollo de capacidades, crecimiento, actualización de competencias y buenos resultados.</p>
@@ -57,6 +58,9 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
