--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Sosemin|2022</title>
 </head>
 <body class="gridIndex">
@@ -28,13 +28,13 @@
     </header>
     <main>
         <section class="main__primary--img">
-            <div class="texto" data-aos="fade-down" data-aos-duration="2000">
+            <div class="texto" data-aos="fade-down"data-aos-duration="2000">
                 <h2>Sosemint Ltda</h2>
                 <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y reacondicionamiento de equipos y maquinaria.</p>
             </div>
         </section>
         <section class="container__card">
-            <div class="container__card--bloque"data-aos="fade-right" data-aos-anchor-placement="top-center">
+            <div class="container__card--bloque" data-aos="fade-right" data-aos-anchor-placement="top-center">
                 <p> Entregamos servicios de excelencia de manera segura, eficaz y rentable en diseño, fabricación, mantenimiento y comercialización de piezas y equipos industriales, caracterizándose por la oportunidad de entrega y calidad.</p>
                 <img class="container__card--img" src="assest/img/imagen_mecanico-removebg-preview.png" alt="imagen mecanico">
             </div>
@@ -44,7 +44,7 @@
             </div>
         </section>
         <section class="container__imgFinal">
-            <div class="textFinal"data-aos="fade-down" data-aos-duration="2000" data-aos-anchor-placement="bottom-bottom">
+            <div class="textFinal" data-aos="fade-up"data-aos-duration="2000">
                 <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos industriales junto con personal administrativo y apoyo, Sosemint. proyecta mantener los servicios y productos actuales, incorporando maquinarias, equipos, software con tecnología de punta , teniendo como prioridad la flexibilización, automatización, versatilidad y aseguramiento de calidad de los procesos productivos y administrativos de la compañía.?</p>
             </div>
         </section>
