--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <title>Sosemin|2022</title>
 </head>
@@ -30,17 +31,17 @@
         <div class="container__main">
             <h2 class="container__main--h2">Te ofrecemos distintos tipos de servicios...</h2>
             <div class="container__card__services">
-                <div class="container__card--bloqueServicios">
+                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="1000">
                     <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
 
                 </div>
-                <div class="container__card--bloqueServicios">
+                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="1500">
                     <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
                 </div>
-                <div class="container__card--bloqueServicios">
+                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="2500">
                     <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
                 </div>
-                <div class="container__card--bloqueServicios">
+                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="3000">
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
 
                 </div>
@@ -59,6 +60,9 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
