--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sosemin|2022</title>
 </head>
 <body>
@@ -26,7 +27,7 @@
         </div>
     </header>
     <main>
-        <div class="contenedor__ubicacion">
+        <div class="contenedor__ubicacion" data-aos="zoom-in">
                 <h1>Ven a visitarnos!</h1>
                 <p>Nos encontramos en... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium autem nobis fuga, delectus quod rem voluptate neque unde enim sequi quas culpa temporibus? Consectetur ducimus deleniti harum mollitia obcaecati placeat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium animi sequi aliquid, assumenda magnam, ipsam esse possimus at laudantium nesciunt ratione doloremque libero mollitia consectetur facilis quis suscipit earum neque.</p>
                 <div style="width: 100%; margin:0 auto;"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Bellavista+(Sosemint)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Sat Navs</a></iframe></div>
@@ -44,6 +45,9 @@
             <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-    
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
