agregando boostrap parte 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
             <div class="container d-flex navbar-dark">
-                <a href="index.html"><img src="assest/img/logo.png"  id="logo" alt="Logo"></a>
+                <a href="index.html"><img src="assest/img/logo.png" id="logo" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon text-light"></span>
@@ -79,49 +79,44 @@
             </button>
         </div>
         <div class="container mt-5">
-            <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
                 <div class="col">
-                    <div class="card">
-                        <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="...">
+                    <div class="card" data-aos="fade-right" data-aos-anchor-placement="top-center">
+                        <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="mecanico">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Servicio</h5>
+                            <p class="card-text">Entregamos servicios de excelencia de manera segura, eficaz y rentable
+                                en diseño, fabricación, mantenimiento y comercialización de piezas y equipos
+                                industriales, caracterizándose por la oportunidad de entrega y calidad.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="assest/img/medida.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Calidad</h5>
+                            <p class="card-text">Nuestro compromiso con la calidad y entrega oportuna, se reafirma con
+                                la recertificación de nuestro sistema de gestión de calidad ISO: 9001, actualizado a su
+                                versión 2015, el cual se sustenta en la mejora continua, y teniendo como principal
+                                orientación la satisfacción de nuestros clientes y grupos de interés!</p>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="card mb-3 mt-4 text-center ">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae odio quasi
+                        pariatur veritatis placeat sapiente quas expedita accusantium laudantium at, eum ducimus ipsam
+                        eos? Mollitia alias molestiae error vitae voluptatum. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Deleniti quas sed cupiditate debitis ipsa aliquid perspiciatis consequuntur
+                        dolores, minus reprehenderit consectetur, possimus unde velit ex, fuga aliquam suscipit cum
+                        maxime.</p>
+                </div>
+            </div>
+
 
 
 
