agregando boostrap parte 3

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card">
-                        <img src="assest/img/medida.png" class="card-img-top" alt="...">
+                    <div class="card" data-aos="fade-left" data-aos-anchor-placement="top-center">
+                        <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Calidad</h5>
                             <p class="card-text">Nuestro compromiso con la calidad y entrega oportuna, se reafirma con
@@ -104,9 +104,9 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3 mt-4 text-center ">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
+            <div class="card mb-3 mt-4 text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+                <img src="assest/img/medida.png" class="card-img-top" alt="...">
+                <div class="card-body ">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae odio quasi
                         pariatur veritatis placeat sapiente quas expedita accusantium laudantium at, eum ducimus ipsam
