boostrap, index y servicios completo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link text-light" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item pe-3">
-                            <a class="nav-link text-light" href="#">Servicios</a>
+                            <a class="nav-link text-light" href="pages/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item pe-3">
                             <a class="nav-link text-light" href="#">Quienes somos</a>
@@ -47,24 +47,24 @@
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="text-center text-light position-absolute top-50 start-50 translate-middle " id="text_carousel"
                 data-aos="fade-down" data-aos-duration="2000">
-                <div class="row">
-                    <div class="col-12">
-                        <h1>Sosemint Ltda</h1>
-                        <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes
-                            y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y
-                            reacondicionamiento de equipos y maquinaria.</p>
-                    </div>
+
+                <div class="container" id="texto">
+                    <h1>Sosemint Ltda</h1>
+                    <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes
+                        y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y
+                        reacondicionamiento de equipos y maquinaria.</p>
                 </div>
+
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="assest/img/slider3.jpg" class="d-block w-100" alt="...">
+                    <img src="assest/img/slider3.jpg" class="d-block w-100" alt="slider">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="assest/img/slider-2.jpg" class="d-block w-100" alt="...">
+                    <img src="assest/img/slider-2.jpg" class="d-block w-100" alt="slider">
                 </div>
                 <div class="carousel-item">
-                    <img src="assest/img/slider-1.jpg" class="d-block w-100" alt="...">
+                    <img src="assest/img/slider-1.jpg" class="d-block w-100" alt="slider">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -81,7 +81,7 @@
         <div class="container mt-5">
             <div class="row row-cols-1 row-cols-md-2 g-4 text-center">
                 <div class="col">
-                    <div class="card" data-aos="fade-right" data-aos-anchor-placement="top-center">
+                    <div class="card" data-aos="fade-right" data-aos-anchor-placement="top-bottom">
                         <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="mecanico">
                         <div class="card-body">
                             <h5 class="card-title">Servicio</h5>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card" data-aos="fade-left" data-aos-anchor-placement="top-center">
+                    <div class="card" data-aos="fade-left" data-aos-anchor-placement="top-bottom">
                         <img src="assest/img/imagen_mecanico-removebg-preview.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Calidad</h5>
@@ -104,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card mb-3 mt-4 text-center" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+            <div class="card mb-3 mt-4 text-center " data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                 <img src="assest/img/medida.png" class="card-img-top" alt="...">
                 <div class="card-body ">
                     <h5 class="card-title">Card title</h5>
@@ -116,77 +116,33 @@
                         maxime.</p>
                 </div>
             </div>
-
-
-
-
-    </main>
-
-
-
-
-
-
-
-
-
-
-    <!--
-    <header class="container__header">
-        <div class="container__logo"> 
-            <a href="index.html"><img src="assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
         </div>
-        <div class="container__menu">
-            <nav>
-                <ul class="container__menu--list">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="pages/servicios.html">Servicios</a></li>
-                    <li><a href="pages/nosotros.html">Quienes Somos</a></li>
-                    <li><a href="pages/ubicacion.html">Ubicacion</a></li>
-                    <li><a href="pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <main>
-
-            
-        
-        <section class="main__primary--img">
-            <div class="texto" data-aos="fade-down"data-aos-duration="2000">
-                <h2>Sosemint Ltda</h2>
-                <p>Empresa dedicada a la industria mecanica, especializada en la fabricaciones de piezas, partes y conjuntos mecanicos, asi como en el diseño de equipos especiales, mantencion y reacondicionamiento de equipos y maquinaria.</p>
-            </div>
-        </section>
-        <section class="container__card">
-            <div class="container__card--bloque" data-aos="fade-right" data-aos-anchor-placement="top-center">
-                <p> Entregamos servicios de excelencia de manera segura, eficaz y rentable en diseño, fabricación, mantenimiento y comercialización de piezas y equipos industriales, caracterizándose por la oportunidad de entrega y calidad.</p>
-                <img class="container__card--img" src="assest/img/imagen_mecanico-removebg-preview.png" alt="imagen mecanico">
-            </div>
-            <div class="container__card--bloque"data-aos="fade-left" data-aos-anchor-placement="top-center">
-                <p>Nuestro compromiso con la calidad y entrega oportuna, se reafirma con la recertificación de nuestro sistema de gestión de calidad  ISO: 9001, actualizado a su versión 2015, el cual se sustenta en la mejora continua, y teniendo como principal orientación la satisfacción de nuestros clientes y grupos de interés!</p>
-                <img class="container__card--img" src="assest/img/medida.png" alt="imagen pie de metro">
-            </div>
-        </section>
         <section class="container__imgFinal">
-            <div class="textFinal" data-aos="fade-up"data-aos-duration="2000">
-                <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos industriales junto con personal administrativo y apoyo, Sosemint. proyecta mantener los servicios y productos actuales, incorporando maquinarias, equipos, software con tecnología de punta , teniendo como prioridad la flexibilización, automatización, versatilidad y aseguramiento de calidad de los procesos productivos y administrativos de la compañía.?</p>
+            <div class="textFinal p-5" data-aos="fade-up" data-aos-duration="2000">
+                <p>Con un excelente equipo formado por más de 14 ingenieros mecánicos y 80 técnicos
+                    industriales junto con personal administrativo y apoyo, Sosemint. proyecta mantener los
+                    servicios y productos actuales, incorporando maquinarias, equipos, software con tecnología de
+                    punta , teniendo como prioridad la flexibilización, automatización, versatilidad y aseguramiento
+                    de calidad de los procesos productivos y administrativos de la compañía.</p>
             </div>
         </section>
+
     </main>
     <footer>
-        <div class="redes">
-            <h3>Redes Sociales</h3>
-            <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-            <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-            <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3>Redes Sociales</h3>
+                    <img src="assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                    <img src="assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                    <img src="assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> |
+                        2022.</p>
+                </div>
+            </div>
         </div>
-        <div class="copyright">
-            <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
-
-        -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
