--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,68 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <title>Sosemin|2022</title>
 </head>
+
 <body>
-    <header class="container__header">
-        <div class="container__logo"> 
-            <a href="../index.html"><img src="../assest/img/logo.png" alt="Logo" class="container__logo--img"></a>
-        </div>
-        <div class="container__menu">
-            <nav>
-                <ul class="container__menu--list">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="../pages/servicios.html">Servicios</a></li>
-                    <li><a href="../pages/nosotros.html">Quienes Somos</a></li>
-                    <li><a href="../pages/ubicacion.html">Ubicacion</a></li>
-                    <li><a href="../pages/contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </div>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light" id="header_bg">
+            <div class="container d-flex navbar-dark">
+                <a href="../index.html"><img src="../assest/img/logo.png" id="logo" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon text-light"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item pe-3 ">
+                            <a class="nav-link text-light" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="../pages/servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light" href="#">Quienes somos</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light">Ubicacion</a>
+                        </li>
+                        <li class="nav-item pe-3">
+                            <a class="nav-link text-light">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+        </nav>
     </header>
     <main>
-        <div class="container__main">
-            <h2 class="container__main--h2">Te ofrecemos distintos tipos de servicios...</h2>
-            <div class="container__card__services">
-                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="1000">
-                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+        <div class="container text-center">
+            <h2 class="fs-2 text-center">Servicios que ofrecemos:</h2>
+            <div class="row mt-4 text-center">
+                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                    <div>
+                        <h4>Numero 1</h4>
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
+                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
+                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
+                            a,
+                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                    </div>
 
                 </div>
-                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="1500">
-                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                    <div>
+                        <h4>Numero 2</h4>
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
+                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
+                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
+                            a,
+                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                    </div>
                 </div>
-                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="2500">
-                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
+                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                    <div>
+                        <h4>Numero 3</h4>
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
+                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
+                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
+                            a,
+                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                    </div>
                 </div>
-                <div class="container__card--bloqueServicios" data-aos="flip-left"data-aos-duration="3000">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum a, doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?</p>
-
+                <div class="col-6 col-lg-12 card p-3 mb-3" id="services" data-aos="flip-left" data-aos-duration="1000">
+                    <div
+                        <h4>Numero 4</h4>
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam ipsam facilis corrupti
+                            delectus soluta hic, eos modi, rem debitis consequatur ex reiciendis cupiditate illum beatae
+                            enim tempore itaque temporibus incidunt! Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Autem porro quidem explicabo, veniam quasi ea facere! Aspernatur atque iusto dolorum
+                            a,
+                            doloribus ducimus suscipit illum iure ab, dolorem, voluptatibus non?.</p>
+                    </div>
                 </div>
-
             </div>
+
         </div>
+
     </main>
     <footer>
-        <div class="redes">
-            <h3>Redes Sociales</h3>
-            <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
-            <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
-            <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h3>Redes Sociales</h3>
+                    <img src="../assest/img/facebook_icono.png" alt="Facebook"><a href="#"></a></img>
+                    <img src="../assest/img/instagram_icono-removebg-preview.png" alt="Instagram"><a href="#"></a></img>
+                    <img src="../assest/img/gmail_icono-removebg-preview.png" alt="Gmail"><a href="#"></a></img>
+                    <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> |
+                        2022.</p>
+                </div>
+            </div>
         </div>
-        <div class="copyright">
-            <p>Pagina Creada por <a href="https://www.instagram.com/edu.schettino0/">Eduardo Schettino </a> | 2022.</p>
         </div>
     </footer>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
-    AOS.init();
+        AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
